@@ -38,7 +38,6 @@ import org.apache.kafka.streams.state.internals.LegacyCheckpointingStateStore;
 import org.apache.kafka.streams.state.internals.RecordConverter;
 import org.apache.kafka.streams.state.internals.TimeOrderedKeyValueBuffer;
 import org.apache.kafka.streams.state.internals.WithRetentionPeriod;
-import org.apache.kafka.streams.state.internals.WrappedStateStore;
 
 import org.slf4j.Logger;
 
@@ -52,6 +51,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.OptionalLong;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static java.lang.String.format;
@@ -136,22 +136,11 @@ public class ProcessorStateManager implements StateManager {
             this.commitCallback = commitCallback;
             this.recordConverter = recordConverter;
             this.offset = null;
-            this.retentionPeriod = extractRetentionPeriod(stateStore);
+            this.retentionPeriod = WithRetentionPeriod.resolveRetentionPeriod(stateStore);
         }
 
         private void setOffset(final Long offset) {
             this.offset = offset;
-        }
-
-        private static long extractRetentionPeriod(final StateStore stateStore) {
-            StateStore current = stateStore;
-            while (current instanceof WrappedStateStore) {
-                current = ((WrappedStateStore<?, ?, ?>) current).wrapped();
-            }
-            if (current instanceof WithRetentionPeriod) {
-                return ((WithRetentionPeriod) current).retentionPeriod();
-            }
-            return -1L;
         }
 
         // the offset is exposed to the changelog reader to determine if restoration is completed
@@ -358,7 +347,7 @@ public class ProcessorStateManager implements StateManager {
                                 "treat it as a task corruption error and wipe out the local state of task {} " +
                                 "before re-bootstrapping", store.stateStore.name(), taskId);
 
-                        throw new TaskCorruptedException(Collections.singleton(taskId));
+                        throw new TaskCorruptedException(Set.of(taskId));
                     } else {
                         log.info("State store {} did not find checkpoint offset, hence would " +
                                         "default to the starting offset at changelog {}",
@@ -369,7 +358,7 @@ public class ProcessorStateManager implements StateManager {
         }
 
         try {
-            stateDirectory.updateTaskOffsets(taskId, changelogOffsets());
+            stateDirectory.updateTaskOffsets(taskId, persistentChangelogOffsets());
         } catch (final RuntimeException e) {
             throw new ProcessorStateException(format("%sError updating state directory offsets when creating the state manager",
                 logPrefix), e);
@@ -455,10 +444,18 @@ public class ProcessorStateManager implements StateManager {
 
     @Override
     public Map<TopicPartition, Long> changelogOffsets() {
+        return changelogOffsets(storeMetadata -> true);
+    }
+
+    private Map<TopicPartition, Long> persistentChangelogOffsets() {
+        return changelogOffsets(storeMetadata -> storeMetadata.stateStore.persistent());
+    }
+
+    private Map<TopicPartition, Long> changelogOffsets(final Predicate<StateStoreMetadata> storeFilter) {
         // return the current offsets for those logged stores
         final Map<TopicPartition, Long> changelogOffsets = new HashMap<>();
         for (final StateStoreMetadata storeMetadata : stores.values()) {
-            if (storeMetadata.changelogPartition != null) {
+            if (storeMetadata.changelogPartition != null && storeFilter.test(storeMetadata)) {
                 // for changelog whose offset is unknown, use 0L indicating earliest offset
                 // otherwise return the current offset + 1 as the next offset to fetch
                 changelogOffsets.put(
@@ -532,7 +529,7 @@ public class ProcessorStateManager implements StateManager {
                 storeMetadata.setEndOffset(optionalLag.getAsLong() + batchEndOffset);
             }
 
-            stateDirectory.updateTaskOffsets(taskId, changelogOffsets());
+            stateDirectory.updateTaskOffsets(taskId, persistentChangelogOffsets());
         }
     }
 
@@ -756,7 +753,7 @@ public class ProcessorStateManager implements StateManager {
             }
         }
 
-        stateDirectory.updateTaskOffsets(taskId, changelogOffsets());
+        stateDirectory.updateTaskOffsets(taskId, persistentChangelogOffsets());
     }
 
     // Commit a sentinel value when the changelog offset is not yet initialized/known
